--- a/4、vue/examples/vue/hello-world/index.html
+++ b/4、vue/examples/vue/hello-world/index.html
@@ -6,9 +6,7 @@
     <title>hello-world</title>
   </head>
   <body>
-  <div id="app">
-      {{ message }}
-  </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
